fix(web-app): correct spacing at top of svg library pages

--- a/services/web-app/components/svg-libraries/svg-library.module.scss
+++ b/services/web-app/components/svg-libraries/svg-library.module.scss
@@ -10,7 +10,7 @@
 .svg-page {
   // prevent jank while importing icons
   min-height: 60vh;
-  padding-top: spacing.$spacing-07;
+  padding-top: spacing.$spacing-11;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
